# acorn

./: CMakeLists.txt  todo.txt
src/: CMakeLists.txt  main.cpp  main_docking.cpp
